Fixing spacing

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,6 +10,10 @@
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+p {
+	margin-bottom: 1rem;
+}
+
 html {
 	min-height: 100vh;
 	width: 100%;
